# mikro_api

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  dependency.py  docker-compose.test.yml  docker-compose.yml  env.example  exeptions.py  fixtures.py  gunicorn.conf.py  local.sqlite  pyproject.toml  settings.py
.github/workflows/: .github.ci.yml  action.yml
alembic/: env.py
alembic/versions/: 08e2263c6431_adding_oauth_field_to_user_model.py  21bca6d33c4e_access_field_removed.py  316aeafe7051_access_nullable_username_unique.py  375f68b4689e_adding_user_id_to_tasks.py  41a2e166b255_init.py  639dbb515299_user_init.py  8cd62e6b8d5f_yandex_access_token_into_user_maodel_.py  b58ec68e7e12_type_added.py  baf9fd43a383_init.py  efa9d5999e6b_change_nullable_in_user_model.py
app/: dependency.py  exeptions.py  logger.py  main.py  settings.py
app/broker/: consumer.py  producer.py
app/client/: google.py  yandex.py
app/handlers/: auth.py  tasks.py  user.py
app/models/: tasks.py
app/repository/: cache_task.py  task.py  user.py
app/schema/: user.py
app/service/: auth.py  task.py  user.py
app/tasks/: handlers.py  schema.py  service.py
app/users/auth/: schema.py  (+2 more)
cache/: accessor.py
client/: google.py  yandex.py
database/: accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: tasks.py  user.py
repository/: cache_task.py  task.py  user.py
schema/: tasks.py  user.py
service/: auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: settings.py
worker/: celery.py
(+25 files in other folders)
